[gd_scene load_steps=2 format=3 uid="uid://dgf645mhq31wx"]

[ext_resource type="Script" uid="uid://bns12gxod0bq7" path="res://src/ui/admin/AdminHub.gd" id="1_ktidb"]

[node name="AdminHub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ktidb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4974739, 0.4974736, 0.49747366, 1)

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Center"]
custom_minimum_size = Vector2(700, 480)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Center/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18

[node name="Title" type="Label" parent="Center/Panel/VBox"]
layout_mode = 2
text = "ADMINISTRACIÃ“N"
horizontal_alignment = 1

[node name="BtnCards" type="Button" parent="Center/Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Cartas"

[node name="BtnEnemies" type="Button" parent="Center/Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Enemigos"

[node name="BtnBack" type="Button" parent="Center/Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Volver"
